--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ top: 120px;
 
 <div class="card">
 
-<h1>💘 yourname, will you be Billota's Valentine? 💘</h1>
+<h1>💘 Rashikaaaaaaa💘 , will you be Billota's Valentine? 💘</h1>
 
 <button class="yes" onclick="yesClick()">Yes ❤️</button>
 
@@ -181,5 +181,6 @@ style="width:250px; margin-top:20px; border-radius:20px;"
 </script>
 
 </body>
+
 
 </html>
