--- a/index.html
+++ b/index.html
@@ -1,187 +1,147 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A Little Surprise</title>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Indie+Flower', cursive;
+            background: #fff5f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+            overflow: hidden;
+        }
 
-<meta charset="UTF-8">
+        /* Floating Hearts */
+        .heart {
+            position: absolute;
+            color: rgba(255, 182, 193, 0.5);
+            font-size: 20px;
+            animation: float 6s linear infinite;
+            z-index: -1;
+        }
+        @keyframes float {
+            0% { transform: translateY(110vh) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(-10vh) rotate(360deg); opacity: 0; }
+        }
 
-<title>Valentine 💖</title>
+        .container {
+            width: 90%;
+            max-width: 400px;
+            animation: fadeIn 0.8s ease-in;
+        }
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-<style>
+        img {
+            width: 220px;
+            border-radius: 15px;
+            margin-bottom: 15px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
 
-body {
+        .hidden { display: none; }
 
-margin: 0;
+        button {
+            background-color: #fff;
+            border: 2px solid #333;
+            padding: 8px 25px;
+            font-family: inherit;
+            font-size: 1.1rem;
+            cursor: pointer;
+            border-radius: 12px;
+            margin: 10px;
+            transition: 0.3s;
+        }
 
-height: 100vh;
+        button:hover { background-color: #fdf2f2; transform: scale(1.05); }
 
-background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+        .gift-btn { font-size: 50px; background: none; border: none; cursor: pointer; display: block; margin: 0 auto; transition: 0.3s; }
+        .gift-btn:hover { transform: scale(1.2); }
 
-display: flex;
+        .final-photo { position: relative; display: inline-block; margin-top: 20px; }
+        .main-img { width: 260px; border: 10px solid #fff; box-shadow: 0 10px 20px rgba(0,0,0,0.1); transform: rotate(-2deg); }
+        .sticker { position: absolute; top: -45px; right: -45px; width: 110px; z-index: 10; transform: rotate(15deg); }
 
-justify-content: center;
-
-align-items: center;
-
-font-family: Arial, sans-serif;
-
-overflow: hidden;
-
-}
-
-.card {
-
-background: white;
-
-padding: 30px;
-
-border-radius: 20px;
-
-text-align: center;
-
-box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-
-width: 90%;
-
-max-width: 350px;
-
-position: relative;
-
-}
-
-h1 {
-
-color: #ff4d6d;
-
-margin-bottom: 25px;
-
-}
-
-button {
-
-padding: 12px 25px;
-
-font-size: 16px;
-
-border: none;
-
-border-radius: 25px;
-
-cursor: pointer;
-
-}
-
-.yes {
-
-background: #ff4d6d;
-
-color: white;
-
-}
-
-.no {
-
-background: #ddd;
-
-position: absolute;
-
-left: 20px;
-
-top: 120px;
-
-}
-
-</style>
-
+        h2 { color: #ff4d6d; }
+    </style>
 </head>
-
 <body>
 
-<div class="card">
+    <audio id="myAudio" loop>
+        <source src="https://files.catbox.moe/n6s9ym.mp3" type="audio/mpeg">
+    </audio>
 
-<h1>💘 Rashikaaaaaaa💘 , will you be Billota's Valentine? 💘</h1>
+    <div id="screen1" class="container">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4VMLHxvLpAXCamspaqsMOUbbYgJedNoxb2w&s">
+        <p>hey zhimbdii ! i made something for you<br>Will you see it?</p>
+        <button onclick="startSurprise()">yes</button>
+        <button onclick="show('screen2')">no</button>
+    </div>
 
-<button class="yes" onclick="yesClick()">Yes ❤️</button>
+    <div id="screen2" class="container hidden">
+        <img src="https://c.tenor.com/Q6-TbDV51xoAAAAd/tenor.gif">
+        <h2>HOW DARE YOUUU!</h2>
+        <button onclick="show('screen1')">Back</button>
+    </div>
 
-<button class="no" id="noBtn">No 😢</button>
+    <div id="screen3" class="container hidden">
+        <img src="https://img.freepik.com/premium-photo/3d-photo-cat-wearing-sunglasses-sweater-with-pink-cat-wearing-pink-sunglasses_1158030-84710.jpg?w=740">
+        <p>Hehe!<br>click below for the surprise!</p>
+        <button onclick="show('screen4')">next</button>
+    </div>
 
-</div>
+    <div id="screen4" class="container hidden">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHJndXp4bmZ5bmZ5bmZ5bmZ5bmZ5bmZ5bmZ5bmZ5bmZ5bmZ5JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/vFKqnCdLPNOKc/giphy.gif">
+        <p>Happy Valentine's Day My pyari si ❤️Billi❤️!!<br>click on the gift box</p>
+        <button class="gift-btn" onclick="show('screen5')">🎁</button>
+    </div>
 
-<script>
+    <div id="screen5" class="container hidden">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFhNn90ytZskPg91gb6NHMAZczHig8nDw5DA&s">
+        <h2>SMILEEEEEE</h2>
+        <p>Click on the camera to reveal photo!!</p>
+        <button onclick="show('screen6')">📸</button>
+    </div>
 
-const noBtn = document.getElementById("noBtn");
+    <div id="screen6" class="container hidden">
+        <div class="final-photo">
+            <img src="https://uc823f1cd21d69a3086756866664.previews.dropboxusercontent.com/p/thumb/AC453elHDCkx4ixIs4J6IHO099e7ygpHfiuxiNy7gPewi6LtaTersM0CL5tEWFLolHDk6M3ukoS1DHh3RNKmgdKoQLF1EPy2PIbVGwxsfVdXytWWXIoZW0aZSp2aF-O0tk-ILjMkXHz-ETH0ZJ6hfMmtk3oIUTbD84dCFXMSPejtj0hwiXLeyTiHwzlhl7uqzcI8dWbBWe4-_xhZ6qbyxlSumRZCrEK3p7hD_8NhFywIC9w_M3HJAQfb7nQcIaJOOPApMBe7rPfKBvdh8mdg10vEuMGHa90yJO4i9BjFUZR7TBYxUVXQsBw4crfdk-ahfp4l13TjwiXOcL3IHvA7YX3lnKF5elYUjUd_nTiF1bkR6Tzh92OC6OEREDD1TVAQkkSorHQIhTNaAKU3m0MyeMa4/p.jpeg?is_prewarmed=true" class="main-img" alt="Us">
+            <img src="https://i.pinimg.com/236x/e0/a1/23/e0a123f2fd83ab4b299acb678a4b2a63.jpg" class="sticker">
+        </div>
+        <h2>I love you ❤️</h2>
+    </div>
 
-const card = document.querySelector(".card");
+    <script>
+        function startSurprise() {
+            var audio = document.getElementById("myAudio");
+            audio.play().catch(function(error) {
+                console.log("Autoplay blocked, waiting for interaction.");
+            });
+            show('screen3');
+        }
 
-function randomMove() {
+        function show(id) {
+            document.querySelectorAll('.container').forEach(c => c.classList.add('hidden'));
+            document.getElementById(id).classList.remove('hidden');
+        }
 
-const maxX = card.clientWidth - noBtn.offsetWidth;
-
-const maxY = card.clientHeight - noBtn.offsetHeight;
-
-const x = Math.random() * maxX;
-
-const y = Math.random() * maxY;
-
-noBtn.style.left = x + "px";
-
-noBtn.style.top = y + "px";
-
-}
-
-// No button keeps moving
-
-setInterval(randomMove, 700);
-
-function yesClick() {
-
-document.body.innerHTML = `
-
-<div style="
-
-display:flex;
-
-flex-direction:column;
-
-justify-content:center;
-
-align-items:center;
-
-height:100vh;
-
-background:#ff9a9e;
-
-color:white;
-
-text-align:center;
-
-padding:20px;
-
-">
-
-<h1>💖 Yayyy Zhimbdiii! I knew it 😍💖</h1>
-
-<img
-
-src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif"
-
-alt="Dancing girl"
-
-style="width:250px; margin-top:20px; border-radius:20px;"
-
->
-
-</div>`;
-
-}
-
-</script>
-
+        // Generate Hearts
+        setInterval(function() {
+            const heart = document.createElement('div');
+            heart.className = 'heart';
+            heart.innerHTML = '❤️';
+            heart.style.left = Math.random() * 100 + 'vw';
+            heart.style.animationDuration = (Math.random() * 3 + 3) + 's';
+            document.body.appendChild(heart);
+            setTimeout(() => heart.remove(), 6000);
+        }, 500);
+    </script>
 </body>
-
-
 </html>
-
